--- a/Trip_Buddy/app/src/main/AndroidManifest.xml
+++ b/Trip_Buddy/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         </activity>
         <activity android:name=".Login"
             android:label="Log in"
+            android:theme="@style/Theme.AppCompat.NoActionBar"
             />
         <activity android:name=".Register"></activity>
     </application>
