--- a/Trip_Buddy/app/src/main/AndroidManifest.xml
+++ b/Trip_Buddy/app/src/main/AndroidManifest.xml
@@ -10,20 +10,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
         <activity android:name=".MainActivity">
+        </activity>
+        <activity android:name=".Login" android:label="Log in">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
-                <meta-data
-                    android:name="com.facebook.sdk.ApplicationId"
-                    android:value="@string/facebook_app_id" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Login"
-            android:label="Log in"
-            />
         <activity android:name=".Register"
             android:label = "Sign up">
         </activity>
