--- a/Trip_Buddy_v0/app/src/main/AndroidManifest.xml
+++ b/Trip_Buddy_v0/app/src/main/AndroidManifest.xml
@@ -64,11 +64,8 @@
         <activity
             android:name=".NewTrip"
             android:label="@string/title_activity_new_trip"
-            android:theme="@android:style/Theme.Holo.Light.Dialog.NoActionBar"
-
-            >
-
-        </activity>
+            android:theme="@android:style/Theme.Holo.Light.Dialog.NoActionBar"></activity>
+        <activity android:name=".MyInfo"></activity>
     </application>
 
 </manifest>
