Update for myInfo 1st

--- a/Trip_Buddy_v0/app/src/main/AndroidManifest.xml
+++ b/Trip_Buddy_v0/app/src/main/AndroidManifest.xml
@@ -65,7 +65,11 @@
             android:name=".NewTrip"
             android:label="@string/title_activity_new_trip"
             android:theme="@android:style/Theme.Holo.Light.Dialog.NoActionBar"></activity>
-        <activity android:name=".MyInfo"></activity>
+        <activity
+            android:name=".MyInfo"
+            android:theme="@style/AppTheme.NoActionBar">
+            >
+        </activity>
     </application>
 
 </manifest>
