--- a/Trip_Buddy_v0/app/build.gradle
+++ b/Trip_Buddy_v0/app/build.gradle
@@ -7,9 +7,13 @@ android {
         applicationId "com.example.fiveguys.trip_buddy_v0"
         minSdkVersion 21
         targetSdkVersion 25
-        versionCode 1
-        versionName "1.0"
+        versionCode getVersionCode()
+        versionName getVersionName()
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
+
+        // Enabling multidex support.
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -17,6 +21,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    productFlavors {
+    }
+}
+
+repositories {
+    maven { url "https://raw.githubusercontent.com/smilefam/SendBird-SDK-Android/master/" }
 }
 
 dependencies {
@@ -25,7 +35,19 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
+    // SendBird
+    compile 'com.sendbird.sdk:sendbird-android-sdk:3.0.22'
+
+    // External libraries
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'org.jsoup:jsoup:1.10.2'
+    // Firebase
+
+
+
     compile 'com.android.support:appcompat-v7:25.3.0'
+    compile 'com.android.support:recyclerview-v7:25.3.0'
+    compile 'com.android.support:cardview-v7:25.3.0'
     compile 'com.android.support:support-v4:25.3.0'
     compile 'com.android.support:design:25.3.0'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
@@ -33,17 +55,13 @@ dependencies {
     compile 'com.google.firebase:firebase-auth:10.2.1'
     compile 'com.google.android.gms:play-services-auth:10.2.1'
     compile 'com.google.firebase:firebase-database:10.2.1'
+    compile 'com.google.firebase:firebase-messaging:10.2.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.google.android.gms:play-services:10.2.1'
     compile 'com.google.firebase:firebase-storage:10.2.1'
     testCompile 'junit:junit:4.12'
+
+    compile 'com.android.support:multidex:1.0.0'
 }
-
-
-
-
-
-
-
 
 apply plugin: 'com.google.gms.google-services'
