--- a/Trip_Buddy_v0/app/src/main/AndroidManifest.xml
+++ b/Trip_Buddy_v0/app/src/main/AndroidManifest.xml
@@ -5,6 +5,9 @@
     <!--<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />-->
     <!--<uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />-->
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
 
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
@@ -15,6 +18,7 @@
 
 
     <application
+        android:name=".main.BaseApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -76,6 +80,26 @@
             android:theme="@style/AppTheme.NoActionBar">
             >
         </activity>
+
+        <!--chat-->
+        <activity android:name=".main.ChatActivity" />
+        <activity android:name=".groupchannel.InviteMemberActivity"
+            android:label="@string/invite_member"/>
+        <activity android:name=".groupchannel.MemberListActivity"
+            android:label="@string/member_list"/>
+        <activity android:name=".groupchannel.CreateGroupChannelActivity"
+            android:label="@string/create_group_channel" />
+        <service android:name=".fcm.MyFirebaseMessagingService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+        <service android:name=".fcm.MyFirebaseInstanceIDService">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
+            </intent-filter>
+        </service>
+
     </application>
 
 </manifest>
